--- a/index.html
+++ b/index.html
@@ -31,25 +31,25 @@
             <div class="text-center hidden-xs">
                 <!-- navigation start -->
                 <nav class="header-navigation fadeIn-element">
-                    <a class="link-underline-menu" href="index-KENBURNS-SLIDESHOW.html#top">Home</a>
-                    <a class="link-underline-menu" href="index-KENBURNS-SLIDESHOW.html#about">About</a>
-                    <a class="link-underline-menu" href="index-KENBURNS-SLIDESHOW.html#services">Services</a>
-                    <span class="logo-holder closed"><a href="index-KENBURNS-SLIDESHOW.html#top"><img alt="Logo" src="img/logo-dark.png"></a></span>
-                    <a class="link-underline-menu" href="index-KENBURNS-SLIDESHOW.html#works">Works</a>
-                    <a class="link-underline-menu" href="index-KENBURNS-SLIDESHOW.html#news">News</a>
-                    <a class="link-underline-menu" href="index-KENBURNS-SLIDESHOW.html#contact">Contact</a>
+                    <a class="link-underline-menu" href="index.html#top">Home</a>
+                    <a class="link-underline-menu" href="index.html#about">About</a>
+                    <a class="link-underline-menu" href="index.html#services">Services</a>
+                    <span class="logo-holder closed"><a href="index.html#top"><img alt="Logo" src="img/logo-dark.png"></a></span>
+                    <a class="link-underline-menu" href="index.html#works">Works</a>
+                    <a class="link-underline-menu" href="index.html#news">News</a>
+                    <a class="link-underline-menu" href="index.html#contact">Contact</a>
                 </nav><!-- navigation end -->
             </div>
             <div class="text-center visible-xs">
                 <!-- navigation mobile start -->
                 <nav class="header-navigation-xs fadeIn-element">
-                    <a class="logo-holder" href="index-KENBURNS-SLIDESHOW.html#top"></a>
-                    <a href="index-KENBURNS-SLIDESHOW.html#top">Home</a>
-                    <a href="index-KENBURNS-SLIDESHOW.html#about">About</a>
-                    <a href="index-KENBURNS-SLIDESHOW.html#services">Services</a>
-                    <a href="index-KENBURNS-SLIDESHOW.html#works">Works</a>
-                    <a href="index-KENBURNS-SLIDESHOW.html#news">News</a>
-                    <a href="index-KENBURNS-SLIDESHOW.html#contact">Contact</a>
+                    <a class="logo-holder" href="index.html#top"></a>
+                    <a href="index.html#top">Home</a>
+                    <a href="index.html#about">About</a>
+                    <a href="index.html#services">Services</a>
+                    <a href="index.html#works">Works</a>
+                    <a href="index.html#news">News</a>
+                    <a href="index.html#contact">Contact</a>
                 </nav><!-- navigation mobile end -->
             </div>
         </header><!-- header section end -->
@@ -86,25 +86,25 @@
             <div class="social-icons-wrapper fadeIn-element">
                 <ul class="social-icons">
                     <li>
-                        <a class="ion-social-twitter" href="index-KENBURNS-SLIDESHOW.html#"></a>
+                        <a class="ion-social-twitter" href="index.html#"></a>
                     </li>
                     <li>
-                        <a class="ion-social-facebook" href="index-KENBURNS-SLIDESHOW.html#"></a>
+                        <a class="ion-social-facebook" href="index.html#"></a>
                     </li>
                     <li>
-                        <a class="ion-social-youtube" href="index-KENBURNS-SLIDESHOW.html#"></a>
+                        <a class="ion-social-youtube" href="index.html#"></a>
                     </li>
                     <li>
-                        <a class="ion-social-linkedin" href="index-KENBURNS-SLIDESHOW.html#"></a>
+                        <a class="ion-social-linkedin" href="index.html#"></a>
                     </li>
                     <li>
-                        <a class="ion-social-instagram" href="index-KENBURNS-SLIDESHOW.html#"></a>
+                        <a class="ion-social-instagram" href="index.html#"></a>
                     </li>
                     <li>
-                        <a class="ion-social-pinterest" href="index-KENBURNS-SLIDESHOW.html#"></a>
+                        <a class="ion-social-pinterest" href="index.html#"></a>
                     </li>
                     <li>
-                        <a class="ion-social-dribbble" href="index-KENBURNS-SLIDESHOW.html#"></a>
+                        <a class="ion-social-dribbble" href="index.html#"></a>
                     </li>
                 </ul>
             </div><!-- social icons end -->
@@ -159,7 +159,7 @@
                             <p>
                                 Touchez l’harmonie, ressentez la perfection, incarnez la beauté.
                                 L’art de sublimer la beauté afro _Inspirer des générations,
-                                <a class="link-underline" href="index-KENBURNS-SLIDESHOW.html#">une coiffure à la fois._</a>
+                                <a class="link-underline" href="index.html#">une coiffure à la fois._</a>
                             </p>
                         </div><!-- page TXT end -->
                     </div><!-- col end -->
@@ -778,7 +778,7 @@
             </div>
         </div><!-- photoSwipe background end -->
         <!-- to top arrow start -->
-        <a class="page-scroll" href="index-KENBURNS-SLIDESHOW.html#top">
+        <a class="page-scroll" href="index.html#top">
         <div class="to-top-arrow">
             <span class="ion-ios-arrow-up"></span>
         </div></a><!-- to top arrow end -->
