--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>
-            Cex - One Page Portfolio Template
+            ELSA - COIFFURE
         </title>
         <meta content="" name="description">
         <meta content="" name="author">
