--- a/index.html
+++ b/index.html
@@ -19,13 +19,6 @@
     <body id="top">
         <!-- preloader start -->
         <div class="preloader-bg"></div>
-        <div id="preloader">
-            <div id="preloader-status">
-                <div class="preloader-position loader">
-                    <span></span>
-                </div>
-            </div>
-        </div><!-- preloader end -->
         <!-- header section start -->
         <header class="container-fluid">
             <div class="text-center hidden-xs">
@@ -36,7 +29,7 @@
                     <a class="link-underline-menu" href="index.html#services">Services</a>
                     <span class="logo-holder closed"><a href="index.html#top"><img alt="Logo" src="img/logo-dark.png"></a></span>
                     <a class="link-underline-menu" href="index.html#works">Works</a>
-                    <a class="link-underline-menu" href="index.html#news">News</a>
+                    <!--<a class="link-underline-menu" href="index.html#news">News</a>-->
                     <a class="link-underline-menu" href="index.html#contact">Contact</a>
                 </nav><!-- navigation end -->
             </div>
