--- a/team.html
+++ b/team.html
@@ -47,7 +47,7 @@
                         <ul class="sub-menu">
                             <li><a href="index.html">Digital Agency</a></li>
                             <li><a href="index-dark.html">Digital Agency Dark</a></li>
-                            <li><a href="creative-agency.html">Creative Agency</a></li>
+                            <li><a href="index.html">Creative Agency</a></li>
                             <li><a href="creative-agency-dark.html">Creative Agency Dark</a></li>
                             <li><a href="advertising-agency.html">Advertising Agency</a></li>
                             <li><a href="advertising-agency-dark.html">Advertising Agency Dark</a></li>
@@ -217,7 +217,7 @@
                                                         </a>
                                                     </li>
                                                     <li>
-                                                        <a target="_blank" href="creative-agency.html">
+                                                        <a target="_blank" href="index.html">
                                                             <img src="assets/img/home/h2-light.png" alt="dark">
                                                             <span>Creative Agency - Light</span>
                                                         </a>
@@ -306,7 +306,7 @@
                                                             <li><a href="index.html">Digital Agency</a></li>
                                                             <li><a href="index-dark.html">Digital Agency Dark</a>
                                                             </li>
-                                                            <li><a href="creative-agency.html">Creative Agency</a>
+                                                            <li><a href="index.html">Creative Agency</a>
                                                             </li>
                                                             <li><a href="creative-agency-dark.html">Creative Agency
                                                                     Dark</a></li>
