--- a/startup-business.html
+++ b/startup-business.html
@@ -47,7 +47,7 @@
                         <ul class="sub-menu">
                             <li><a href="index.html">Digital Agency</a></li>
                             <li><a href="index-dark.html">Digital Agency Dark</a></li>
-                            <li><a href="creative-agency.html">Creative Agency</a></li>
+                            <li><a href="index.html">Creative Agency</a></li>
                             <li><a href="creative-agency-dark.html">Creative Agency Dark</a></li>
                             <li><a href="advertising-agency.html">Advertising Agency</a></li>
                             <li><a href="advertising-agency-dark.html">Advertising Agency Dark</a></li>
