--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico in the root directory -->
 <!--    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">-->
-    <!-- CSS here -->
+    <!-- CSS hre -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/meanmenu.css">
     <link rel="stylesheet" href="assets/css/animate.css">
